Don't subtract border from max size for display rect.

The display rect must be consistent with max size,
otherwise the text may not fit.

BUG=664370
TEST=TooltipControllerTest.TestMaxWidth

Review-Url: https://codereview.chromium.org/2556083002
Cr-Commit-Position: refs/heads/master@{#440337}

Former-commit-id: 8658c9c6854e1a550d2adc155cb17dc8ed39e62c