ui/views/corewm/tooltip_aura.h
@@ -12,6 +12,7 @@
 #include "ui/views/widget/widget_observer.h"
 
 namespace gfx {
+class RenderText;
 class Size;
 }  // namespace gfx
 
@@ -20,6 +21,9 @@ namespace views {
 class Widget;
 
 namespace corewm {
+namespace test {
+class TooltipAuraTestApi;
+}
 
 // Implementation of Tooltip that shows the tooltip using a Widget and Label.
 class VIEWS_EXPORT TooltipAura : public Tooltip, public WidgetObserver {
@@ -29,6 +33,9 @@ class VIEWS_EXPORT TooltipAura : public Tooltip, public WidgetObserver {
 
  private:
   class TooltipView;
+
+  friend class test::TooltipAuraTestApi;
+  gfx::RenderText* GetRenderTextForTest();
 
   // Adjusts the bounds given by the arguments to fit inside the desktop
   // and applies the adjusted bounds to the label_.
